# inzynierka_PSO

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: image [20.0x 01072 17 29].csv  image [20.0x 01073 16 29].csv  image [20.0x 01074 15 29].csv  image [20.0x 01075 14 29].csv  image [20.0x 01076 13 29].csv  image [20.0x 01077 12 29].csv  image [20.0x 01078 11 29].csv  image [20.0x 01079 10 29].csv  image [20.0x 01080 9 29].csv  image [20.0x 01081 11 30].csv  image [20.0x 01082 12 30].csv  image [20.0x 01083 13 30].csv  image [20.0x 01084 14 30].csv  image [20.0x 01085 15 30].csv  image [20.0x 01086 16 30].csv  image [20.0x 01087 17 30].csv  image [20.0x 01088 18 30].csv  image [20.0x 01089 19 30].csv  image [20.0x 01090 20 30].csv  image [20.0x 01091 21 30].csv  image [20.0x 01092 22 30].csv  image [20.0x 01093 23 30].csv  image [20.0x 01094 24 30].csv  image [20.0x 01095 25 30].csv  image [20.0x 01096 26 30].csv  image [20.0x 01097 27 30].csv  image [20.0x 01098 28 30].csv  image [20.0x 01099 29 30].csv  image [20.0x 01100 30 30].csv  image_20_0x_00175_22_6.csv
src/: config.py  main.py
src/attributes/: cost_function_file_path_description.txt  data_analysis_description.txt  data_extraction_description.txt  data_postprocessing_description.txt  description.txt  iters_description.txt  n_particles_description.txt  sampling_coef_description.txt  simulation_description.txt  weights_description.txt
src/data_analysis/: notebook.ipynb  run_analysis.py
src/data_analysis/notebooks/: postprocessing.ipynb
src/data_extraction/: feature_extraction.py  main.py  reader.py  rm_used_photo.py  run_extraction.py
src/data_postprocessing/: cost_function.py
src/simulation/: GlobalBestPSOWithCallback.py  display_motion.py  run_simulation.py  visualizer.py
