[tool.poetry]
name = "inzynierka"
version = "0.1.0"
description = ""
authors = ["astefanczyk <astefanczyk@student.agh.edu.pl>"]

[tool.poetry.dependencies]
python = "3.10.2"
numpy = ">=1.22,<=1.24.3"
absl-py = "^2.0.0"
astunparse = "^1.6.3"
attrs = "^23.1.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachetools = "^5.3.2"
certifi = "^2023.7.22"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
contourpy = "^1.2.0"
crashtest = "^0.4.1"
cryptography = "^41.0.5"
cycler = "^0.12.1"
distlib = "^0.3.7"
dulwich = "^0.21.6"
fastjsonschema = "^2.19.0"
filelock = "^3.13.1"
flatbuffers = "^23.5.26"
fonttools = "^4.44.3"
future = "^0.18.3"
gast = "*"
google-auth = "^2.23.4"
google-auth-oauthlib = ">=0.4.1,<0.5"
google-pasta = "^0.2.0"
grpcio = "^1.59.2"
h5py = "^3.10.0"
idna = "^3.4"
importlib-metadata = "^6.8.0"
importlib-resources = "^6.1.1"
installer = "^0.7.0"
"jaraco.classes" = "^3.3.0"
jeepney = "^0.8.0"
joblib = "^1.3.2"
keras = "*"
keyring = "^24.3.0"
kiwisolver = "^1.4.5"
libclang = "^16.0.6"
Markdown = "^3.5.1"
MarkupSafe = "^2.1.3"
matplotlib = "^3.8.1"
ml-dtypes = ">=0.2.0,<0.3.0"
more-itertools = "^10.1.0"
msgpack = "^1.0.7"
oauthlib = "^3.2.2"
opencv-python = "^4.8.1"
opt-einsum = "^3.3.0"
package_name = "^0.1"
packaging = "^23.2"
pandas = "^2.1.3"
pexpect = "^4.8.0"
Pillow = "^10.1.0"
pip = "^23.3.1"
pip-tools = "^7.3.0"
pkginfo = "^1.9.6"
platformdirs = "^4.0.0"
poetry-core = "^1.8.1"
protobuf = "<3.20.0"
ptyprocess = "^0.7.0"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
pycparser = "^2.21"
pyparsing = "^3.1.1"
pyproject_hooks = "^1.0.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.31.0"
requests-futures = "^1.0.1"
requests-oauthlib = "^1.3.1"
requests-toolbelt = "^1.0.0"
rsa = "^4.9"
SecretStorage = "^3.3.3"
setuptools = "^68.2.2"
shellingham = "^1.5.4"
six = "^1.16.0"
tensorboard-data-server = "*"
tensorflow-estimator = "*"
tensorflow-io-gcs-filesystem = "0.25.0"
tensorflow-probability = "*"
tensorflow = "2.8"
termcolor = "^2.3.0"
threadpoolctl = "^3.2.0"
tomli = "^2.0.1"
tomlkit = "^0.12.3"
tqdm = "^4.66.1"
trove-classifiers = "^2023.11.14"
typing-extensions = ">=3.6.6,<4.6.0"
tzdata = "^2023.3"
urllib3 = "^2.1.0"
Werkzeug = "^3.0.1"
wheel = "*"
wrapt = ">=1.11.0,<1.15"
zipp = "^3.17.0"
pyswarms = "^1.3.0"
opencv-contrib-python = "^4.8.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
